--- a/api/api.csproj
+++ b/api/api.csproj
@@ -152,8 +152,13 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="Controllers\ChoiceController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\OptionController.cs" />
+    <Compile Include="Controllers\TermController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
+    <Compile Include="DAL\OptionSelectionContext.cs" />
+    <Compile Include="DAL\OptionSelectionInitializer.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
