--- a/backend/backend.csproj
+++ b/backend/backend.csproj
@@ -191,11 +191,14 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
-    <Compile Include="Controllers\AccountController.cs" />
-    <Compile Include="Controllers\ChoiceController.cs" />
+    <Compile Include="Controllers\API\AccountController.cs" />
+    <Compile Include="Controllers\API\ChoiceController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\OptionController.cs" />
-    <Compile Include="Controllers\TermController.cs" />
+    <Compile Include="Controllers\MVC\ChoiceMVCController.cs" />
+    <Compile Include="Controllers\MVC\OptionMVCController.cs" />
+    <Compile Include="Controllers\MVC\TermMVCController.cs" />
+    <Compile Include="Controllers\API\OptionController.cs" />
+    <Compile Include="Controllers\API\TermController.cs" />
     <Compile Include="DAL\OptionSelectionContext.cs" />
     <Compile Include="DAL\OptionSelectionInitializer.cs" />
     <Compile Include="Global.asax.cs">
@@ -257,6 +260,21 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+    <Content Include="Views\OptionMVC\Create.cshtml" />
+    <Content Include="Views\OptionMVC\Delete.cshtml" />
+    <Content Include="Views\OptionMVC\Details.cshtml" />
+    <Content Include="Views\OptionMVC\Edit.cshtml" />
+    <Content Include="Views\OptionMVC\Index.cshtml" />
+    <Content Include="Views\TermMVC\Create.cshtml" />
+    <Content Include="Views\TermMVC\Delete.cshtml" />
+    <Content Include="Views\TermMVC\Details.cshtml" />
+    <Content Include="Views\TermMVC\Edit.cshtml" />
+    <Content Include="Views\TermMVC\Index.cshtml" />
+    <Content Include="Views\ChoiceMVC\Create.cshtml" />
+    <Content Include="Views\ChoiceMVC\Delete.cshtml" />
+    <Content Include="Views\ChoiceMVC\Details.cshtml" />
+    <Content Include="Views\ChoiceMVC\Edit.cshtml" />
+    <Content Include="Views\ChoiceMVC\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
