Add client site with functions

--- a/ClientSite/ClientSite.csproj
+++ b/ClientSite/ClientSite.csproj
@@ -67,6 +67,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="images\header_sprite.gif" />
+    <Content Include="images\navsite_home_bcit.gif" />
+    <Content Include="images\progcat_logo.gif" />
     <Content Include="Styles\client_style.css" />
     <Content Include="Index.html" />
     <Content Include="packages.config" />
@@ -79,9 +82,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="images\" />
-  </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
