Deleted some files.

--- a/backend/backend.csproj
+++ b/backend/backend.csproj
@@ -240,6 +240,8 @@
     <Content Include="Areas\HelpPage\Views\Help\DisplayTemplates\HelpPageApiModel.cshtml" />
     <Content Include="Areas\HelpPage\Views\Help\DisplayTemplates\ApiGroup.cshtml" />
     <Content Include="Areas\HelpPage\Views\Help\Api.cshtml" />
+    <None Include="Properties\PublishProfiles\bcit - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\bcit - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-1.10.2-vsdoc.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -272,21 +274,6 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
-    <Content Include="Views\OptionMVC\Create.cshtml" />
-    <Content Include="Views\OptionMVC\Delete.cshtml" />
-    <Content Include="Views\OptionMVC\Details.cshtml" />
-    <Content Include="Views\OptionMVC\Edit.cshtml" />
-    <Content Include="Views\OptionMVC\Index.cshtml" />
-    <Content Include="Views\TermMVC\Create.cshtml" />
-    <Content Include="Views\TermMVC\Delete.cshtml" />
-    <Content Include="Views\TermMVC\Details.cshtml" />
-    <Content Include="Views\TermMVC\Edit.cshtml" />
-    <Content Include="Views\TermMVC\Index.cshtml" />
-    <Content Include="Views\ChoiceMVC\Create.cshtml" />
-    <Content Include="Views\ChoiceMVC\Delete.cshtml" />
-    <Content Include="Views\ChoiceMVC\Details.cshtml" />
-    <Content Include="Views\ChoiceMVC\Edit.cshtml" />
-    <Content Include="Views\ChoiceMVC\Index.cshtml" />
     <Content Include="Views\ChoiceAdmin\Create.cshtml" />
     <Content Include="Views\ChoiceAdmin\Delete.cshtml" />
     <Content Include="Views\ChoiceAdmin\Details.cshtml" />
